cmake_minimum_required(VERSION 3.4)
project(form_hello_world)
add_executable(form_hello_wold hello_world.cpp)
target_include_directories(form_hello_wold PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../formatter_ex_lib)
target_include_directories(form_hello_wold PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../formatter_lib)
target_link_libraries(form_hello_wold ${CMAKE_CURRENT_SOURCE_DIR}/../libcreate_form_ex.a)
target_link_libraries(form_hello_wold ${CMAKE_CURRENT_SOURCE_DIR}/../libcreate_form.a)
