cmake_minimum_required(VERSION 3.0)
project(create_solv)
#add_library(solv STATIC solver.cpp)
#target_include_directories(solv PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../solver_lib)
add_executable(solver equation.cpp)
target_include_directories(solver PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../solver_lib)
target_include_directories(solver PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../formatter_ex_lib)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../formatter_ex_lib create)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../solver_lib create_)
target_link_libraries(solver create_form_ex)
target_link_libraries(solver solv)
